# cowgill-be

./: .dockerignore  .gitignore  Dockerfile  Pulumi.backend.yaml  Pulumi.yaml  Tiltfile  __main__.py  pyproject.toml
infra/: oracle_bucket.py  oracle_compute.py
k8s/: deployment.yaml  secret.yaml.template
slackbot/: README.md  constants.py  main.py  pyproject.toml  utilities.py
